# YouTube-API-Python

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  task.sh  template.env  thunder-collection_python-yt-api.json
api/: routes.py
api/basemodels/: __init__.py  convert.py
api/converter/: __init__.py  audio.py  soundcloud.py  video.py  video_metadata.py  youtube.py  youtube_metadata.py
api/converter/cache/: __init__.py
api/helpers/: __init__.py
api/metadata/: __init__.py
api/quest_streamer/: __init__.py
tests/: test_converter_audio.py  test_converter_init.py
