[tool.poetry]
name = "youtube-api-python"
version = "0.1.0"
description = ""
authors = ["denNorske"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2023.10.13"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
requests = "^2.31.0"
ffmpeg = "^1.4"
ffprobe = "^0.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
